fix: Fix a typo in notebook

--- a/matplotlib/Matplotlib.ipynb
+++ b/matplotlib/Matplotlib.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## first import necessary library"
+    "## Imports"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "first import necessary library"
    ]
   },
   {
