Update pandas notebooks

--- a/pandas/02_Selection.ipynb
+++ b/pandas/02_Selection.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Selecting  and Replacing  Efficiently\n"
+    "# Pandas\n",
+    "## Selection\n"
    ]
   },
   {
@@ -147,11 +148,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Selecting Rows & Columns Efficiently using .iloc[] & .loc[]\n",
+    "### Selecting Rows & Columns Efficiently using .iloc[] & .loc[]\n",
     "\n",
     "\n",
     "In this section, we will introduce how to locate and select rows efficiently from dataframes using **.iloc[]** & **.loc[]** pandas functions. We will use iloc[] for the index number locator and loc[] for the index name locator.\n",
-    "In the example below we will select the first 500 rows of the poker dataset. Firstly by using the **.loc[]** function, and then by using the **.iloc[]** function."
+    "In the example below we will select 1000 rows of the poker dataset randomly. Firstly by using the **.loc[]** function, and then by using the **.iloc[]** function."
    ]
   },
   {
@@ -160,10 +161,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Specify the index of rows to select randomly and avoid caching effect\n",
     "def loc_speed_test():\n",
     "    rows = np.random.randint(0,len(poker_data),1000) \n",
-    "    # Time selecting rows using .loc[]\n",
+    "    # Specify the index of rows to select randomly\n",
     "    totall_time = 0\n",
     "    for i in range(1000):\n",
     "        loc_start_time = time.time()\n",
@@ -182,9 +182,8 @@
    "outputs": [],
    "source": [
     "def iloc_speed_test():\n",
-    "    # Specify the range of rows to select\n",
+    "    # Specify the index of rows to select randomly\n",
     "    rows = np.random.randint(0,len(poker_data),1000)\n",
-    "    # Time selecting rows using .iloc[]\n",
     "    totall_time = 0\n",
     "    for i in range(1000):\n",
     "        iloc_start_time = time.time()\n",
@@ -277,8 +276,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "name_time_list= []\n",
     "iloc_time_list= []\n",
     "for i in range(100):\n",
@@ -302,7 +299,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  Replacing Values in a DataFrame Effectively\n"
+    "### Replacing Values in a DataFrame Effectively\n"
    ]
   },
   {
@@ -486,13 +483,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can see that there is a difference in time complexity with the built-in function 114% faster than using the **.loc()** method to find the rows and columns index of the values and replace it."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -515,6 +505,13 @@
     "replace_time = sum(replace_time_list)/10000\n",
     "pandas_time = sum(pandas_time_list)/10000\n",
     "print('The differnce: {} %'.format(((1/replace_time )/(1/pandas_time)-1)*100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that there is a difference in time complexity with the built-in function 114% faster than using the **.loc()** method to find the rows and columns index of the values and replace it."
    ]
   },
   {
