--- a/pandas/00_basics.ipynb
+++ b/pandas/00_basics.ipynb
@@ -4,14 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pandas Basic and Usefull Methods"
+    "# Pandas\n",
+    "## Chapter 0: Basics"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reading DataBase"
+    "### Reading DataBase"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In pandas, data is stored in DataFrames.  A DataFrame is a two-dimensional data structure composed of rows and columns — exactly like a simple spreadsheet or a SQL table. Each column of a DataFrame is a pandas Series. These columns should be of the same length, but they can be of different data types — float, int, bool, and so on."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read a comma-separated values (csv) file into DataFrame:"
    ]
   },
   {
@@ -28,7 +43,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Describe detail  of Dataset"
+    "### Describe data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "df.head() returns the first n rows for the object based on position. It is useful for quickly testing if your object has the right type of data in it:"
    ]
   },
   {
@@ -154,6 +176,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "df.info() prints information about a DataFrame including the index dtype and columns, non-null values and memory usage."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -181,6 +210,13 @@
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "df.describe generates descriptive statistics."
    ]
   },
   {
@@ -396,7 +432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plot Histogram of Prices "
+    "Plot() makes plots of Series or DataFrame."
    ]
   },
   {
@@ -433,7 +469,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Selection using iloc"
+    "### Selection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A part of data can be selected using iloc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Select the first row:"
    ]
   },
   {
@@ -457,8 +507,14 @@
     }
    ],
    "source": [
-    "# Select the first row\n",
     "print(df.iloc[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Select the rows 5 to 8:"
    ]
   },
   {
@@ -491,8 +547,14 @@
     }
    ],
    "source": [
-    "# Select the  row 5 to 8\n",
     "print(df.iloc[5:9])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Select the rows 5 to 9 and columns 0 to 2:"
    ]
   },
   {
@@ -512,7 +574,6 @@
     }
    ],
    "source": [
-    "# Select the  row 5 to 9 and column 0 to 2\n",
     "print(df.iloc[5:8,0:3])"
    ]
   },
@@ -520,7 +581,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Add new Column base on exists "
+    "### Add new Column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add euro column:"
    ]
   },
   {
@@ -529,153 +597,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert Price in Dollar to Euro by muliplying in 1.5\n",
-    "df_new = df.assign(Price_Euro=df['Price'] * 1.5)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Avg. Area Income</th>\n",
-       "      <th>Avg. Area House Age</th>\n",
-       "      <th>Avg. Area Number of Rooms</th>\n",
-       "      <th>Avg. Area Number of Bedrooms</th>\n",
-       "      <th>Area Population</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>Address</th>\n",
-       "      <th>Price_Euro</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>79545.458574</td>\n",
-       "      <td>5.682861</td>\n",
-       "      <td>7.009188</td>\n",
-       "      <td>4.09</td>\n",
-       "      <td>23086.800503</td>\n",
-       "      <td>1.059034e+06</td>\n",
-       "      <td>208 Michael Ferry Apt. 674\\nLaurabury, NE 3701...</td>\n",
-       "      <td>1.588550e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>79248.642455</td>\n",
-       "      <td>6.002900</td>\n",
-       "      <td>6.730821</td>\n",
-       "      <td>3.09</td>\n",
-       "      <td>40173.072174</td>\n",
-       "      <td>1.505891e+06</td>\n",
-       "      <td>188 Johnson Views Suite 079\\nLake Kathleen, CA...</td>\n",
-       "      <td>2.258836e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>61287.067179</td>\n",
-       "      <td>5.865890</td>\n",
-       "      <td>8.512727</td>\n",
-       "      <td>5.13</td>\n",
-       "      <td>36882.159400</td>\n",
-       "      <td>1.058988e+06</td>\n",
-       "      <td>9127 Elizabeth Stravenue\\nDanieltown, WI 06482...</td>\n",
-       "      <td>1.588482e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>63345.240046</td>\n",
-       "      <td>7.188236</td>\n",
-       "      <td>5.586729</td>\n",
-       "      <td>3.26</td>\n",
-       "      <td>34310.242831</td>\n",
-       "      <td>1.260617e+06</td>\n",
-       "      <td>USS Barnett\\nFPO AP 44820</td>\n",
-       "      <td>1.890925e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>59982.197226</td>\n",
-       "      <td>5.040555</td>\n",
-       "      <td>7.839388</td>\n",
-       "      <td>4.23</td>\n",
-       "      <td>26354.109472</td>\n",
-       "      <td>6.309435e+05</td>\n",
-       "      <td>USNS Raymond\\nFPO AE 09386</td>\n",
-       "      <td>9.464152e+05</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Avg. Area Income  Avg. Area House Age  Avg. Area Number of Rooms  \\\n",
-       "0      79545.458574             5.682861                   7.009188   \n",
-       "1      79248.642455             6.002900                   6.730821   \n",
-       "2      61287.067179             5.865890                   8.512727   \n",
-       "3      63345.240046             7.188236                   5.586729   \n",
-       "4      59982.197226             5.040555                   7.839388   \n",
-       "\n",
-       "   Avg. Area Number of Bedrooms  Area Population         Price  \\\n",
-       "0                          4.09     23086.800503  1.059034e+06   \n",
-       "1                          3.09     40173.072174  1.505891e+06   \n",
-       "2                          5.13     36882.159400  1.058988e+06   \n",
-       "3                          3.26     34310.242831  1.260617e+06   \n",
-       "4                          4.23     26354.109472  6.309435e+05   \n",
-       "\n",
-       "                                             Address    Price_Euro  \n",
-       "0  208 Michael Ferry Apt. 674\\nLaurabury, NE 3701...  1.588550e+06  \n",
-       "1  188 Johnson Views Suite 079\\nLake Kathleen, CA...  2.258836e+06  \n",
-       "2  9127 Elizabeth Stravenue\\nDanieltown, WI 06482...  1.588482e+06  \n",
-       "3                          USS Barnett\\nFPO AP 44820  1.890925e+06  \n",
-       "4                         USNS Raymond\\nFPO AE 09386  9.464152e+05  "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_new.head(5)"
+    "df_new = df.assign(Price_Euro=df['Price'] * 1.5)\n",
+    "df_new.head(5)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Access to Data using Query"
+    "Also it is possible to rename columns."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Lets Rename name of some column in dataframe\n",
     "df.rename(columns={\"Avg. Area Number of Rooms\":\"Avg_AreaNumberofRooms\",\"Avg. Area House Age\":\"Avg_AreaHouseAge\"},inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Query data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Select rows where Avg_AreaNumberofRooms is greater than 6 and Avg_AreaNumberofRooms is less than 7 and sort in descending order:"
    ]
   },
   {
@@ -797,10 +750,16 @@
     }
    ],
    "source": [
-    "# Select rows where Avg_AreaNumberofRooms is greater than 6 and Avg_AreaNumberofRooms is less than 7 and sort in desending order\n",
     "df_query = df.query('Avg_AreaNumberofRooms > 3 and Avg_AreaNumberofRooms < 7') \\\n",
     "            .sort_values(by=\"Avg_AreaNumberofRooms\",ascending=False)\n",
     "df_query.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another way:"
    ]
   },
   {
@@ -922,7 +881,6 @@
     }
    ],
    "source": [
-    "# another way to Query\n",
     "filt_df = df[(df['Avg_AreaNumberofRooms']>3) & (df['Avg_AreaNumberofRooms']<7) ]\n",
     "filt_df.head()"
    ]
@@ -931,7 +889,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Checking missing value"
+    "### Check missing value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "df.isnull() detects missing values."
    ]
   },
   {
@@ -1122,6 +1087,13 @@
    ],
    "source": [
     "df.isnull()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is possible to fill missing values."
    ]
   },
   {
@@ -1338,6 +1310,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "df.dropna() drops rows or columns that have null values."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -1366,17 +1345,18 @@
    "source": [
     "# Drop row that have null value\n",
     "df_drop_na = df.dropna()\n",
-    "df_drop_na.info()"
+    "\n",
+    "# drop columns that have null value\n",
+    "df_drop_na = df.dropna(axis=1)\n",
+    "\n",
+    "df.info()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# drop columns that have null value\n",
-    "df_drop_na = df.dropna(axis=1)"
+    "df.drop() drops rows or columns"
    ]
   },
   {
@@ -1498,7 +1478,7 @@
     }
    ],
    "source": [
-    "# Drop some row\n",
+    "# Drop rows 0 and 1\n",
     "df_drop = df.drop([0,1],axis=0)\n",
     "df_drop.head()"
    ]
@@ -1616,23 +1596,23 @@
     }
    ],
    "source": [
-    "# Drop some row\n",
+    "# Drop 'Avg_AreaNumberofRooms' column\n",
     "df_drop = df.drop([\"Avg_AreaNumberofRooms\"],axis=1)\n",
     "df_drop.head()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Pivot Table"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using Pivot Table"
+    "pd.pivot_table() Create a spreadsheet-style pivot table as a DataFrame."
    ]
   },
   {
@@ -1846,7 +1826,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## using Group By"
+    "### Group By"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Groups DataFrame using a mapper or by a Series of columns. A groupby operation involves some combination of splitting the object, applying a function, and combining the results. This can be used to group large amounts of data and compute operations on these groups."
    ]
   },
   {
@@ -2182,17 +2169,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Transpose"
+    "### Transpose\n",
+    "Transpose DataFrame."
    ]
   },
   {
@@ -2678,7 +2659,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Merge"
+    "### Merge\n",
+    "df.merge() merges DataFrame or named Series objects with a database-style join. A named Series object is treated as a DataFrame with a single named column. The join is done on columns or indexes. If joining columns on columns, the DataFrame indexes will be ignored. Otherwise if joining indexes on indexes or indexes on a column or columns, the index will be passed on. When performing a cross merge, no column specifications to merge on are allowed."
    ]
   },
   {
@@ -2716,7 +2698,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## save Dataframe as csv"
+    "### Save Dataframe as csv"
    ]
   },
   {
