--- a/numpy/02_BasicArrayManipulations.ipynb
+++ b/numpy/02_BasicArrayManipulations.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "## Chapter 3: Basic Array Manipulations\n",
-    "Data manipulation in Python is nearly synonymous with NumPy array manipulation: even newer tools like Pandas ([Chapter 3](03.00-Introduction-to-Pandas.ipynb)) are built around the NumPy array.\n",
+    "Data manipulation in Python is nearly synonymous with NumPy array manipulation: even newer tools like Pandas are built around the NumPy array.\n",
     "This section will present several examples of using NumPy array manipulation to access data and subarrays, and to split, reshape, and join the arrays.\n",
     "\n",
     "A few categories of basic array manipulations will covered here:\n",
